--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,26 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:dcbapp
-spring.datasource.driveClassName=org.h2.Driver
-spring.datasource.username=yahaya
-spring.datasource.password=1234
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-server.error.include-message=always
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:dcbapp
+#spring.datasource.driveClassName=org.h2.Driver
+#spring.datasource.username=yahaya
+#spring.datasource.password=1234
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#server.error.include-message=always
 
+spring.datasource.url=jdbc:mysql://localhost:3306/department
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5innoDBDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#server.error.include-message=always
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/department
+#spring.datasource.username=postgres
+#spring.datasource.password=yahaya
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#server.error.include-message=always
