--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Properties to use H2 in-memory Database
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:dcbapp
 #spring.datasource.driveClassName=org.h2.Driver
@@ -6,6 +7,7 @@
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #server.error.include-message=always
 
+#Properties to use MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/department
 spring.datasource.username=root
 spring.datasource.password=
@@ -16,6 +18,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.format_sql=true
 #server.error.include-message=always
 
+#Properties to use PostGreSQL
 #spring.datasource.url=jdbc:postgresql://localhost:5432/department
 #spring.datasource.username=postgres
 #spring.datasource.password=yahaya
