--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     password: ''
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: 'true'
   config:
     activate:
@@ -27,7 +27,7 @@ spring:
     password: ''
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: 'true'
   config:
     activate:
@@ -43,7 +43,7 @@ spring:
     password: ''
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: 'true'
   config:
     activate:
