Config to expose all other endpoints of actuator add

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   profiles:
     active: prod
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
 ---
 
@@ -17,6 +22,7 @@ spring:
   config:
     activate:
       on-profile: dev
+
 ---
 
 spring:
